2010-05-25  Jaroslav Hajek  <highegg@gmail.com>

	* ov.cc (octave_value::length): Simplify.

2010-05-25  Jaroslav Hajek  <highegg@gmail.com>

	* ov-base-mat.h (octave_base_matrix::ndims): New override.
	* ov-base-scalar.h (octave_base_scalar::numel,
	octave_base_scalar::ndims): New overrides.

2010-05-25  Jaroslav Hajek  <highegg@gmail.com>

	* ov-base.cc (octave_base_value::ndims): Remove fallback
	implementation (makes no sense).
	* ov-base.h (octave_base_value::ndims): Use a simplistic fallback
	here.

2010-05-25  Jaroslav Hajek  <highegg@gmail.com>

	* ov-base.h (octave_base_value::rows, octave_base_value::columns):
	Use const where appropriate, don't test for impossible condition.

2010-05-24  Jaroslav Hajek  <highegg@gmail.com>

	* Cell.h (Cell::index, Cell::assign, Cell::delete_elements):
	Make signatures consistent with inherited overloads. Import inherited
	overloads to class's scope.
	* oct-map.cc (Octave_map::maybe_delete_elements): Simplify.

2010-05-20  John W. Eaton  <jwe@octave.org>

	* utils.cc (Ffile_in_path, Ffile_in_loadpath): If no file is
	found, return empty character string instead of empty matrix.

2010-05-20  Jaroslav Hajek  <highegg@gmail.com>

	* DLD-FUNCTIONS/onCleanup.cc (octave_oncleanup::load_ascii,
	octave_oncleanup::load_binary, octave_oncleanup::load_hdf5,
	octave_oncleanup::save_ascii, octave_oncleanup::save_binary,
	octave_oncleanup::save_hdf5): Comment out unused params.

2010-05-18  Jaroslav Hajek  <highegg@gmail.com>

	* defun-int.h (octave_auto_shlib): Make members public.
	* DLD-FUNCTIONS/onCleanup.cc: New source.
	* DLD-FUNCTIONS/module-files: Add it here.

2010-05-18  Jaroslav Hajek  <highegg@gmail.com>

	* variables.cc (set_internal_variable (int&, ..., const char **)):
	Drop nchoices argument. Instead determine nchoices by trailing NULL.
	* variables.h (SET_INTERNAL_VARIABLE_CHOICES): Update.
	* DLD-FUNCTIONS/svd.cc (Fsvd_driver): Update.

2010-05-17  Jaroslav Hajek  <highegg@gmail.com>
